--- a/Week2 Assignment/images_links.html
+++ b/Week2 Assignment/images_links.html
@@ -120,7 +120,9 @@
         <br>
         <p style=" font-size: 2em ;">Welcome to our website! We offer cutting-edge technology solutions to enhance your life.</p>
         <div class="technology">
-            <img src="images/tech.jpg" alt="Technology Image" >
+            <a href="https://wallpapers.com/technology">
+                <img src="images/tech.jpg" alt="Technology Image" >
+            </a>
         </div>
     </section>
 
@@ -130,9 +132,11 @@
 
             The verdant valleys adorned with vibrant hues of green foliage create a tapestry of life, where every leaf whispers tales of resilience and growth. Sun-kissed meadows sway gently in the breeze, a symphony of wildflowers dancing to the rhythm of nature's melody.</p>
         <div class="gallery">
-            <img src="images/nature.jpg" alt="Nature Image 1">
-            <img src="images/nature1.jpg" alt="Nature Image 2">
-            <img src="images/nature2.jpg" alt="Nature Image 3">
+            <a href="https://wallpapers.com/search/nature">
+                <img src="images/nature.jpg" alt="Nature Image 1">
+                <img src="images/nature1.jpg" alt="Nature Image 2">
+                <img src="images/nature2.jpg" alt="Nature Image 3">
+            </a>
         </div>
     </section>
 
@@ -142,9 +146,11 @@
 
             Imagine savoring a perfectly seared fillet of tender Wagyu beef, its rich marbling melting luxuriously in your mouth, accompanied by a velvety red wine reduction infused with hints of black truffle and thyme. Each bite is a symphony of savory notes, leaving a lingering impression of indulgence and satisfaction.</p>
             <div>
-                <img src="images/food.jpg" alt="Food Image 1"> 
-            <img src="images/food1.avif" alt="Food Image 2"> 
-            <img src="images/food2.jpg" alt="Food Image 3"> 
+                <a href="https://wallpapers.com/search/food">
+                    <img src="images/food.jpg" alt="Food Image 1"> 
+                    <img src="images/food1.avif" alt="Food Image 2"> 
+                    <img src="images/food2.jpg" alt="Food Image 3"> 
+                </a>
             </div>
     </section>
 </body>
